Agent with multiple dimensions propagation works.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 137,
    "metadata": {
     "collapsed": false
    },
@@ -117,12 +117,6 @@
     "    \n",
     "    def q_rhs_H_l_nou(self, q_s, p_l, lambda_l):\n",
     "        return np.array(p_l)\n",
-    "       \n",
-    "#     def u_rhs_H_l_nou(self, q_s, p_l, lambda_l):\n",
-    "#         dim = len(qp_vec)/4\n",
-    "#         q = qp_vec[:dim]\n",
-    "#         p = qp_vec[dim:2*dim]\n",
-    "#         return -1*Gamma*np.zeros(np.shape(len(self.u_s_0)))\n",
     "\n",
     "    def H_l_u(self, q_s, p_l):\n",
     "        return 1\n",
@@ -133,22 +127,6 @@
     "    def q_rhs_H_l_u(self, q_s, p_l):\n",
     "        return np.array(p_l)\n",
     "    \n",
-    "#     def qp_rhs_H_l_u(self, q_s, p_l):\n",
-    "#         q_dot =  np.zeros(np.shape(p_l))\n",
-    "#         p_dot =  np.zeros(np.shape(q_s))\n",
-    "#         return np.concatenate([q_dot, p_dot])/\n",
-    "       \n",
-    "#     def u_rhs_H_l_u(self, t, u_vec, **kwargs):\n",
-    "#         qp_vec = kwargs['qp_vec']\n",
-    "#         dim = len(qp_vec)/4\n",
-    "#         q = qp_vec[:dim]\n",
-    "#         p = qp_vec[dim:2*dim]\n",
-    "#         q_D = qp_vec[2*dim:3*dim]\n",
-    "#         p_D = qp_vec[3*dim:]\n",
-    "#         Gamma = kwargs['Gamma']\n",
-    "#         # for u-dot\n",
-    "#         return -1*Gamma*np.zeros(np.shape(u_vec))\n",
-    "\n",
     "    def H_l_D(self, q_lD, p_lD):\n",
     "        return np.array(q_lD).dot(p_lD)\n",
     "        \n",
@@ -190,16 +168,6 @@
     "        q_rhs_H_l = self.q_rhs_H_l_nou(q_s, p_l, lambda_l) + sum([self.q_rhs_H_l_u(q_s, p_l)*u_s_i for u_s_i in u_s])\n",
     "        p_rhs_H_l = self.p_rhs_H_l_nou(q_s, p_l, lambda_l) + sum([self.p_rhs_H_l_u(q_s, p_l)*u_s_i for u_s_i in u_s])\n",
     "        return np.concatenate([q_rhs_H_l, p_rhs_H_l])\n",
-    "    \n",
-    "#     def p_rhs_H_l(self, q_s, p_l, u_s):\n",
-    "#         # needs to call p_rhs_H_l_nou and p_rhs_H_l_u\n",
-    "#         q_s_dot =  q_s + p_l + u_s \n",
-    "#         return q_s_dot\n",
-    "    \n",
-    "#     def q_rhs_H_l(self, q_s, p_l, u_s):\n",
-    "#         # needs to call q_rhs_H_l_nou and q_rhs_H_l_u\n",
-    "#         p_l_dot =  q_s + p_l + u_s\n",
-    "#         return p_l_dot\n",
     "\n",
     "    def u_rhs(self, t, u_vec, **kwargs):\n",
     "        return -1*self.Gamma*np.zeros(np.shape(u_vec))\n",
@@ -242,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 149,
    "metadata": {
     "collapsed": true
    },
@@ -255,7 +223,7 @@
     "        state_indices (list of integers): This list tells which states pertain to this agent. e.g. [1,2] would \n",
     "        tell us that states 1 and 2 pertain to this agent.\n",
     "        \n",
-    "        A word on notation:  The notation used for the methods of the agent is:  \n",
+    "        A word oNn notation:  The notation used for the methods of the agent is:  \n",
     "            - If it is a partial derivative: <denominator>_rhs_H_<type of hamiltonian (l, mf, or s)>_<nou or u>.  e.g., \n",
     "            \"qp_rhs_H_l_u\" denotes the partial derivative with respect to q and p of the terms in the local Hamiltonian that contain control variables.\n",
     "            - If it is a hamiltonian: H_<type of hamiltonian (l, mf, or s)>_<nou or u>.  e.g. \"H_mf_nou\" denotes the mean field hamiltonian\n",
@@ -267,12 +235,13 @@
     "        self.bb = blackboard\n",
     "\n",
     "        # Inputs for numerical propagator\n",
+    "        # qp_vec is going to be [q_s, p_l, p_mf], so it will have dimension = 3*state_dim\n",
     "\n",
     "        self.q_s_0 = np.array([0,2])\n",
     "        self.p_l_0 = np.array([0,3])\n",
     "        self.p_mf_0 = np.array([0,1])\n",
-    "        self.u_0 = np.array([0])\n",
-    "        self.qpu_vec = np.hstack([self.q_s_0, self.p_l_0, self.p_mf_0, self.u_0])\n",
+    "        self.u_s_0 = np.array([0])\n",
+    "        self.qpu_vec = np.hstack([self.q_s_0, self.p_l_0, self.p_mf_0, self.u_s_0])\n",
     "        self.state_dim = 2\n",
     "        self.Gamma = 1 \n",
     "        self.gamma = 1\n",
@@ -294,7 +263,7 @@
     "    def validate_dimensions(self):\n",
     "        # TODO: move to parent class \"SlidingWindow\"\n",
     "        assert len(self.state_indices) == self.state_dim, 'state dimensions are not consistent.  dimension of state indices is '+str(len(self.state_indices)) +' and state_dim is '+str(self.state_dim)\n",
-    "        assert len(self.control_indices) == len(self.u_0), 'control dimensions are not consistent.  dimension of control_indices is '+str(len(self.control_indices)) +' and len(u_0) is '+str(len(self.u_0))\n",
+    "        assert len(self.control_indices) == len(self.u_s_0), 'control dimensions are not consistent.  dimension of control_indices is '+str(len(self.control_indices)) +' and len(u_0) is '+str(len(self.u_s_0))\n",
     "        assert len(self.qpu_vec) == 3*self.state_dim + len(self.control_indices), ' control and state dimensions are not consistent with qpu_vec : length of qpu_vec is '+str(len(self.qpu_vec))+ ' and 3*self.state_dim + len(self.control_indices) is ' + str(3*self.state_dim + len(self.control_indices))\n",
     "    \n",
     "    '''\n",
@@ -305,157 +274,114 @@
     "        - \n",
     "    '''\n",
     "    \n",
-    "    def L_l(self, q, q_dot, u):\n",
-    "        return\n",
+    "    def L_l(self, q_s, q_s_dot, u_s):\n",
+    "        return 1\n",
     "    \n",
-    "    def L_l_q_dot(self, t, q, q_dot, u, **kwargs):\n",
-    "        return\n",
+    "    def L_l_q_dot(self, q_s, q_s_dot, u_s):\n",
+    "        return q_l\n",
     "    \n",
-    "    def H_l_nou(self, q, p, lambda_l):\n",
-    "        return \n",
+    "    def H_l_nou(self, q_s, p_l, lambda_l):\n",
+    "        return 1\n",
     "\n",
-    "    def qp_rhs_H_l_nou(self, t, qp_vec, **kwargs):\n",
-    "        dim = len(qp_vec)/2\n",
-    "        q = qp_vec[:dim]\n",
-    "        p = qp_vec[dim:2*dim]\n",
-    "        u = kwargs['u_0']\n",
-    "        # for q-dot\n",
-    "        q_dot =  np.zeros(np.shape(p))\n",
-    "        # for p-dot\n",
-    "        p_dot =  np.zeros(np.shape(q))\n",
-    "        q_D_dot = np.zeros(np.shape(p))\n",
-    "        p_D_dot = np.zeros(np.shape(q))\n",
-    "        return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
-    "       \n",
-    "    def u_rhs_H_l_nou(self, t, u_vec, **kwargs):\n",
-    "        qp_vec = kwargs['qp_vec']\n",
-    "        dim = len(qp_vec)/4\n",
-    "        q = qp_vec[:dim]\n",
-    "        p = qp_vec[dim:2*dim]\n",
-    "        q_D = qp_vec[2*dim:3*dim]\n",
-    "        p_D = qp_vec[3*dim:]\n",
-    "        Gamma = kwargs['Gamma']\n",
-    "        # for u-dot\n",
-    "        returnurn -1*Gamma*np.zeros(np.shape(u_vec))\n",
-    "\n",
-    "    def H_l_u(self, q, p, u):\n",
-    "        return \n",
+    "    def p_rhs_H_l_nou(self, q_s, p_l, lambda_l):\n",
+    "        return np.array(p_l)\n",
     "    \n",
-    "    def qp_rhs_H_l_u(self, t, qp_vec, **kwargs):\n",
-    "        dim = len(qp_vec)/4\n",
-    "        q = qp_vec[:dim]\n",
-    "        p = qp_vec[dim:2*dim]\n",
-    "        q_D = qp_vec[2*dim:3*dim]\n",
-    "        p_D = qp_vec[3*dim:]\n",
-    "        u = kwargs['u_0']\n",
-    "        # for q-dot\n",
-    "        q_dot =  np.zeros(np.shape(p))\n",
-    "        # for p-dot\n",
-    "        p_dot =  np.zeros(np.shape(q))\n",
-    "        q_D_dot =  np.zeros(np.shape(p))\n",
-    "        p_D_dot =  np.zeros(np.shape(q))\n",
-    "        return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
-    "       \n",
-    "    def u_rhs_H_l_u(self, t, u_vec, **kwargs):\n",
-    "        qp_vec = kwargs['qp_vec']\n",
-    "        dim = len(qp_vec)/4\n",
-    "        q = qp_vec[:dim]\n",
-    "        p = qp_vec[dim:2*dim]\n",
-    "        q_D = qp_vec[2*dim:3*dim]\n",
-    "        p_D = qp_vec[3*dim:]\n",
-    "        Gamma = kwargs['Gamma']\n",
-    "        # for u-dot\n",
-    "        return -1*Gamma*np.zeros(np.shape(u_vec))\n",
+    "    def q_rhs_H_l_nou(self, q_s, p_l, lambda_l):\n",
+    "        return np.array(p_l)\n",
     "\n",
-    "    def H_l_D():\n",
-    "        pass\n",
+    "    def H_l_u(self, q_s, p_l):\n",
+    "        return 1\n",
+    "    \n",
+    "    def p_rhs_H_l_u(self, q_s, p_l):\n",
+    "        return np.array(p_l)\n",
+    "    \n",
+    "    def q_rhs_H_l_u(self, q_s, p_l):\n",
+    "        return np.array(p_l)\n",
+    "    \n",
+    "    def H_l_D(self, q_lD, p_lD):\n",
+    "        return np.array(q_lD).dot(p_lD)\n",
     "        \n",
-    "    def L_l_D():\n",
-    "        pass\n",
+    "    def L_l_D(self, q_lD, p_lD):\n",
+    "        # return scalar\n",
+    "        return 1\n",
     "        \n",
-    "    def L_l_D_q_Dot():\n",
-    "        pass\n",
+    "    def L_l_D_q_Dot(self, q_lD, p_lD):\n",
+    "        # return 1 by state_dim, 1-D array\n",
+    "        # each q_lD is a 1-D array of size 1 by state_dim array\n",
+    "        return q_lD\n",
     "\n",
     "    def qp_rhs(self, t, qp_vec, **kwargs):\n",
     "        # u_s is constant (because of causality, remember?)\n",
     "        u_s = kwargs['u_0']\n",
     "        state_dim = kwargs['state_dim']\n",
+    "        # TODO:  get a kwargs working for lambda_l\n",
+    "        lambda_l = 0 #kwargs['lambda_l']\n",
     "        q_s = qp_vec[:state_dim]\n",
     "        p_l = qp_vec[state_dim:2*state_dim]\n",
     "        p_mf = qp_vec[2*state_dim:]\n",
     "\n",
     "        qp_rhs_H_mf = self.qp_rhs_H_mf(q_s, p_mf, u_s)\n",
-    "        \n",
     "        p_rhs_H_mf = qp_rhs_H_mf[:state_dim]\n",
     "        q_rhs_H_mf = qp_rhs_H_mf[state_dim:]\n",
     "        \n",
-    "        qp_rhs_H_l = self.qp_rhs_H_l(q_s, p_l, u_s)\n",
+    "        qp_rhs_H_l = self.qp_rhs_H_l(q_s, p_l, u_s, lambda_l)\n",
     "        q_rhs_H_l = qp_rhs_H_l[:state_dim]\n",
     "        p_rhs_H_l = qp_rhs_H_l[state_dim:]\n",
-    "        \n",
+    "\n",
     "        q_s_dot = self.gamma*q_rhs_H_mf + (1-self.gamma)*q_rhs_H_l\n",
     "        p_mf_dot = p_rhs_H_mf\n",
     "        p_l_dot = -1*p_rhs_H_l\n",
     "        \n",
     "        return np.concatenate([q_s_dot, p_l_dot, p_mf_dot])\n",
     "    \n",
-    "    def qp_rhs_H_l(self, q_s, p_l, u_s):\n",
-    "        q_rhs_H_l = self.q_rhs_H_l(q_s, p_l, u_s)\n",
-    "        p_rhs_H_l = self.p_rhs_H_l(q_s, p_l, u_s)\n",
+    "    def qp_rhs_H_l(self, q_s, p_l, u_s, lambda_l):\n",
+    "        #TODO: there is one lambda_l per constraint. need to work out dimensions.\n",
+    "        q_rhs_H_l = self.q_rhs_H_l_nou(q_s, p_l, lambda_l) + sum([self.q_rhs_H_l_u(q_s, p_l)*u_s_i for u_s_i in u_s])\n",
+    "        p_rhs_H_l = self.p_rhs_H_l_nou(q_s, p_l, lambda_l) + sum([self.p_rhs_H_l_u(q_s, p_l)*u_s_i for u_s_i in u_s])\n",
     "        return np.concatenate([q_rhs_H_l, p_rhs_H_l])\n",
-    "    \n",
-    "    def p_rhs_H_l(self, q_s, p_l, u_s):\n",
-    "        q_s_dot =  q_s+p_l+u_s \n",
-    "        return q_s_dot\n",
-    "    \n",
-    "    def q_rhs_H_l(self, q_s, p_l, u_s):\n",
-    "        p_l_dot =  q_s + p_l + u_s\n",
-    "        return p_l_dot\n",
-    "    \n",
+    "\n",
     "    def u_rhs(self, t, u_vec, **kwargs):\n",
-    "        return -1*self.Gamma*np.zeros(np.shape(u_vec)) \n",
+    "        return -1*self.Gamma*np.zeros(np.shape(u_vec))\n",
     "\n",
-    "    ## Mean Field methods \n",
-    "    def H_MF_nou(self, q, p):\n",
-    "        pass\n",
+    "    ## Mean Field methods\n",
+    "    def H_MF_nou(self, q_s, p_mf):\n",
+    "        return 1\n",
     "\n",
-    "    def H_MF_u(self, q, p):\n",
-    "        pass\n",
+    "    def H_MF_u(self, q_s, p_mf, u_s):\n",
+    "        return 1\n",
     "        \n",
-    "    def qp_rhs_H_mf(self, q_s, p_mf, p_l, u_s):\n",
+    "    def qp_rhs_H_mf(self, q_s, p_mf, u_s):\n",
     "        # remember that we want to propagate as much as possible together in the same rhs function for numerical purposes\n",
     "        # remember that q_rhs here is w.r.t p_mf but p_rhs here is w.r.t q_s\n",
-    "        q_H_mf_dot = self.p_rhs_H_mf(q_s, p_mf, p_l, u_s)\n",
+    "        q_H_mf_dot = self.p_rhs_H_mf(q_s, p_mf, u_s)\n",
     "        p_H_mf_dot = self.q_rhs_H_mf(q_s, p_mf, u_s)\n",
     "        return np.concatenate([q_H_mf_dot, p_H_mf_dot])\n",
     "    \n",
     "    def q_rhs_H_mf(self, q_s, p_mf, u_s):\n",
-    "        p_H_mf_dot = self.q_rhs_H_mf_nou(q_s, p_mf) + sum(self.q_rhs_H_mf_u(q_s, p_mf)*u for i,j in zip())\n",
-    "        return p_H_mf_dot\n",
+    "        return self.q_rhs_H_mf_nou(q_s, p_mf) + sum([self.q_rhs_H_mf_u(q_s, p_mf)*u_i for u_i in u_s])\n",
     "        \n",
     "    def q_rhs_H_mf_u(self, q_s, p_mf):\n",
     "        # there should be one of these for each control variable\n",
     "        p_H_mf_u_dot_1 = q_s + p_mf # or something\n",
-    "#         p_H_mf_u_dot_2 = q_s[1] + p_mf[1] # or something\n",
-    "        return np.concatenate([p_H_mf_u_dot_1]) #, p_H_mf_u_dot_2])\n",
+    "        return np.concatenate([p_H_mf_u_dot_1])\n",
     "    \n",
-    "    def p_rhs_H_mf(self, q_s, p_mf, p_l, u_s):\n",
-    "        return self.p_rhs_H_mf_nou(q_s, p_mf) + sum([self.p_rhs_H_mf_u(q_s, p_mf)*u for i,j in zip()])\n",
+    "    def p_rhs_H_mf(self, q_s, p_mf, u_s):\n",
+    "        return self.p_rhs_H_mf_nou(q_s, p_mf) + sum([self.p_rhs_H_mf_u(q_s, p_mf)*u_i for u_i in u_s])\n",
     "\n",
     "    def p_rhs_H_mf_nou(self, q_s, p_mf):\n",
     "        return q_s + p_mf # or something\n",
     "\n",
     "    def q_rhs_H_mf_nou(self, q_s, p_mf):\n",
-    "        p_H_mf_nou_dot_1 = q_s + p_mf\n",
-    "        return np.concatenate([p_H_mf_nou_dot_1]) #, p_H_mf_nou_dot_2])\n",
+    "        return  q_s + p_mf\n",
     "\n",
     "    def p_rhs_H_mf_u(self, q_s, p_mf):\n",
-    "        return q_s + p_mf\n"
+    "        q_H_mf_u_dot = q_s + p_mf\n",
+    "        return np.concatenate([q_H_mf_u_dot])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 150,
    "metadata": {
     "collapsed": false
    },
@@ -478,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 151,
    "metadata": {
     "collapsed": false
    },
@@ -523,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 152,
    "metadata": {
     "collapsed": false
    },
@@ -616,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 153,
    "metadata": {
     "collapsed": false
    },
@@ -631,18 +557,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 159,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "bb.update_q_p_u_dict(myAgent)"
+    "bb.update_q_p_u_dict(myAgent)\n",
+    "bb.update_q_p_u_dict(myAgent2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 160,
    "metadata": {
     "collapsed": false
    },
@@ -650,10 +577,13 @@
     {
      "data": {
       "text/plain": [
-       "{'p_l': {'1': 0}, 'p_mf': {'1': 0}, 'q_s': {'1': 0}, 'u_s': {'1': 0}}"
+       "{'p_l': {'1': 0, '2': 3},\n",
+       " 'p_mf': {'1': 0, '2': 1},\n",
+       " 'q_s': {'1': 0, '2': 2},\n",
+       " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,18 +594,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 161,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "q_p_u_dict = bb.construct_p_q(myAgent)"
+    "q_p_u_dict = bb.construct_p_q(myAgent2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 162,
    "metadata": {
     "collapsed": false
    },
@@ -683,10 +613,13 @@
     {
      "data": {
       "text/plain": [
-       "{'p_l': {'1': 0}, 'p_mf': {'1': 0}, 'q_s': {'1': 0}, 'u_s': {'1': 0}}"
+       "{'p_l': {'1': 0, '2': 3},\n",
+       " 'p_mf': {'1': 0, '2': 1},\n",
+       " 'q_s': {'1': 0, '2': 2},\n",
+       " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 166,
    "metadata": {
     "collapsed": false
    },
@@ -729,7 +662,7 @@
     "# forgot to pass in 'u_s' as a keyword argument\n",
     "qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us = propagate_dynamics(myAgent)\n",
     "# forgot to pass in 'u_s' as a keyword argument\n",
-    "# qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2 = propagate_dynamics(myAgent2)"
+    "qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2 = propagate_dynamics(myAgent2)"
    ]
   },
   {
@@ -745,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 167,
    "metadata": {
     "collapsed": false
    },
@@ -764,7 +697,7 @@
        " [array([0.])])"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 168,
    "metadata": {
     "collapsed": false
    },
@@ -783,19 +716,19 @@
     {
      "data": {
       "text/plain": [
-       "(array([  0.        ,  82.30417415,   0.        , -27.22676579,\n",
-       "          0.        ,  81.30417415,   0.        ]),\n",
+       "(array([ 0.        , 82.30417415,  0.        ,  0.40596919,  0.        ,\n",
+       "        81.30417415,  0.        ]),\n",
        " array([ 0.        , 11.57728582]),\n",
-       " array([ 0.        , -2.72097727]),\n",
+       " array([0.       , 1.1035885]),\n",
        " array([ 0.        , 10.57728582]),\n",
        " array([0.]),\n",
        " [array([ 0.        , 11.57728582])],\n",
-       " [array([ 0.        , -2.72097727])],\n",
+       " [array([0.       , 1.1035885])],\n",
        " [array([ 0.        , 10.57728582])],\n",
        " [array([0.])])"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,6 +736,15 @@
    "source": [
     "qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
