I discovered there is some code lying around in the notebook for control law propagator, http://localhost:8888/notebooks/Control_Law_Propagator_v2.ipynb that needs to be incorporated into the sliding_window.py file.  Namely the ability to run over multiple windows. Currently it runs for only one window and doesn't use t_terminal. How to fix this:     - change current propagate_dynamics method to use a "while t < t_terminal" loop       instead of a for loop.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 180,
    "metadata": {
     "collapsed": false
    },
@@ -84,7 +84,7 @@
     "        self.T =  2\n",
     "        self.K=1 \n",
     "\n",
-    "        self.t_terminal = 2\n",
+    "        self.t_terminal = 4\n",
     "        self.n_s = 10\n",
     "\n",
     "        self.validate_dimensions()\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 181,
    "metadata": {
     "collapsed": true
    },
@@ -252,8 +252,8 @@
     "\n",
     "        # Inputs for sliding window\n",
     "        self.t_0 = 0 \n",
-    "        self.T =  2\n",
-    "        self.K=1 \n",
+    "        self.T = 2\n",
+    "        self.K = 1 \n",
     "\n",
     "        self.t_terminal = 2\n",
     "        self.n_s = 10\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 182,
    "metadata": {
     "collapsed": false
    },
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 183,
    "metadata": {
     "collapsed": false
    },
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 184,
    "metadata": {
     "collapsed": false
    },
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 185,
    "metadata": {
     "collapsed": false
    },
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 186,
    "metadata": {
     "collapsed": false
    },
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 187,
    "metadata": {
     "collapsed": false
    },
@@ -545,7 +545,7 @@
        " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,18 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "q_p_u_dict = bb.construct_p_q(myAgent2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 188,
    "metadata": {
     "collapsed": false
    },
@@ -581,7 +570,7 @@
        " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 189,
    "metadata": {
     "collapsed": false
    },
@@ -640,63 +629,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 190,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(array([0., 0., 0., 0.]),\n",
-       " array([0.]),\n",
-       " array([0.]),\n",
-       " array([0.]),\n",
-       " array([0.]),\n",
-       " [array([0.])],\n",
-       " [array([0.])],\n",
-       " [array([0.])],\n",
-       " [array([0.])])"
-      ]
-     },
-     "execution_count": 167,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0.] [0.] [0.] [0.] [0.] [array([0.])] [array([0.])] [array([0.])] [array([0.])]\n",
+      "[ 0.         82.30417415  0.          0.40596919  0.         81.30417415\n",
+      "  0.        ] [ 0.         11.57728582] [0.        1.1035885] [ 0.         10.57728582] [0.] [array([ 0.        , 11.57728582])] [array([0.       , 1.1035885])] [array([ 0.        , 10.57728582])] [array([0.])]\n"
+     ]
     }
    ],
    "source": [
-    "qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us"
+    "print qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us\n",
+    "print qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 169,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([ 0.        , 82.30417415,  0.        ,  0.40596919,  0.        ,\n",
-       "        81.30417415,  0.        ]),\n",
-       " array([ 0.        , 11.57728582]),\n",
-       " array([0.       , 1.1035885]),\n",
-       " array([ 0.        , 10.57728582]),\n",
-       " array([0.]),\n",
-       " [array([ 0.        , 11.57728582])],\n",
-       " [array([0.       , 1.1035885])],\n",
-       " [array([ 0.        , 10.57728582])],\n",
-       " [array([0.])])"
-      ]
-     },
-     "execution_count": 169,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2"
+    "Think quickly about the control variable.  how to quench that?  We still need to return ALL control variables from the mean field every time we quench."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Try another very small test\n",
+    "\n",
+    "- run propagation for Agent using multiple windows so we can test using initial values, etc.\n",
+    "- and we can also test all of the methods for the agent rather than only the one for \n"
    ]
   },
   {
