WOrking on sliding_window method inside of MeanField.ipynb:         # get values from blackboard         # get values from sensors         # set initial conditions using those two things above
        # for the times, propagate_dynamics needs: t_0, T, and K.  T and K can come from the sliding_window_instance,
        #...t_0 will be passed in.  t_0 is the start of the window

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -667,13 +667,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get sliding window working for multiple windows"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def sliding_window(sliding_window_instance):\n",
+    "    ''' \n",
+    "    Inputs:\n",
+    "        t_0 (int): Initial time to start propagating dynamics\n",
+    "        T (int): End time of propagating dynamics \n",
+    "        q_0 (np.array): initial values of state vector\n",
+    "        p_0 (np.array): initial values of costate vector\n",
+    "        u_0 (np.array): initial values of control vector\n",
+    "        state_dim (int): number of states\n",
+    "        Gamma (float): algorithmic parameter for Riemann descent algorithm\n",
+    "        t_terminal (int): time marking termination of control law propagator algorithm\n",
+    "    Outputs:\n",
+    "        q_bars, p_bars, u_bars (list of np.arrays): implemented state/costate/control values for entire propagator.\n",
+    "    ''' \n",
+    "    t_0, T, K, q_0, p_0, u_0, state_dim, Gamma, t_terminal = sliding_window_instance.t_0, sliding_window_instance.T, sliding_window_instance.K, sliding_window_instance.q_0, sliding_window_instance.p_0, sliding_window_instance.u_0, sliding_window_instance.state_dim, sliding_window_instance.Gamma, sliding_window_instance.t_terminal\n",
+    "    q_ls_bars, p_ls_bars, p_mfs_bars = [], [], []\n",
+    "    t = t_0 # wall clock time\n",
+    "    qpu_vec = np.hstack([q_0, p_0, u_0])\n",
+    "    while t < t_terminal:\n",
+    "        # get values from blackboard\n",
+    "        # get values from sensors\n",
+    "        # set initial conditions using those two things above \n",
+    "        \n",
+    "        # for the times, propagate_dynamics needs: t_0, T, and K.  T and K can come from the sliding_window_instance, \n",
+    "        #...t_0 will be passed in.  t_0 is the start of the window\n",
+    "        qpu_vec, q_ls_bar, p_ls_bar, p_mfs_bar = propagate_dynamics(qpu_vec, sliding_window_instance)\n",
+    "        # qs, ps, and us will go to Mean Field somehow\n",
+    "\n",
+    "        q_bars.append(q_bar)\n",
+    "        p_bars.append(p_bar)\n",
+    "        u_bars.append(u_bar)\n",
+    "        \n",
+    "    return q_bars, p_bars, u_bars\n"
+   ]
   }
  ],
  "metadata": {
