Removed the MeanField class because it is contained inside each agent.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
    "source": [
     "class Agent:\n",
     "    \n",
-    "    def __init__(self, mean_field, blackboard, state_indices, control_indices):\n",
+    "    def __init__(self, blackboard, state_indices, control_indices):\n",
     "        '''\n",
     "        state_indices (list of integers): This list tells which states pertain to this agent. e.g. [1,2] would \n",
     "        tell us that states 1 and 2 pertain to this agent.\n",
@@ -60,7 +60,7 @@
     "        '''\n",
     "        self.state_indices = state_indices\n",
     "        self.control_indices = control_indices\n",
-    "        self.mf = mean_field\n",
+    "#         self.mf = mean_field\n",
     "        self.bb = blackboard\n",
     "\n",
     "        # Inputs for numerical propagator\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -218,7 +218,7 @@
    "source": [
     "class Agent2:\n",
     "    \n",
-    "    def __init__(self, mean_field, blackboard, state_indices, control_indices):\n",
+    "    def __init__(self, blackboard, state_indices, control_indices):\n",
     "        '''\n",
     "        state_indices (list of integers): This list tells which states pertain to this agent. e.g. [1,2] would \n",
     "        tell us that states 1 and 2 pertain to this agent.\n",
@@ -231,7 +231,6 @@
     "        '''\n",
     "        self.state_indices = state_indices\n",
     "        self.control_indices = control_indices\n",
-    "        self.mf = mean_field\n",
     "        self.bb = blackboard\n",
     "\n",
     "        # Inputs for numerical propagator\n",
@@ -381,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -404,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -449,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -504,22 +503,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "bb = Blackboard()\n",
-    "mean_field = MeanField()\n",
+    "# mean_field = MeanField()\n",
     "\n",
-    "myAgent=Agent(mean_field, bb, state_indices=[1], control_indices=[1])\n",
-    "myAgent2=Agent2(mean_field, bb, state_indices=[1,2], control_indices=[1])"
+    "myAgent=Agent(bb, state_indices=[1], control_indices=[1])\n",
+    "myAgent2=Agent2(bb, state_indices=[1,2], control_indices=[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -531,32 +530,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'p_l': {'1': 0, '2': 3},\n",
-       " 'p_mf': {'1': 0, '2': 1},\n",
-       " 'q_s': {'1': 0, '2': 2},\n",
-       " 'u_s': {'1': 0}}"
-      ]
-     },
-     "execution_count": 187,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bb.q_p_u_dict"
+    "q_p_u_dict = bb.q_p_u_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -570,7 +555,7 @@
        " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -629,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -638,22 +623,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0. 0. 0. 0.] [0.] [0.] [0.] [0.] [array([0.])] [array([0.])] [array([0.])] [array([0.])]\n",
-      "[ 0.         82.30417415  0.          0.40596919  0.         81.30417415\n",
-      "  0.        ] [ 0.         11.57728582] [0.        1.1035885] [ 0.         10.57728582] [0.] [array([ 0.        , 11.57728582])] [array([0.       , 1.1035885])] [array([ 0.        , 10.57728582])] [array([0.])]\n"
+      "[0. 0. 0. 0.] [0.] [0.] [0.] [0.] [array([0.])] [array([0.])] [array([0.])] [array([0.])]\n"
      ]
     }
    ],
    "source": [
     "print qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us\n",
-    "print qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Think quickly about the control variable.  how to quench that?  We still need to return ALL control variables from the mean field every time we quench."
+    "# print qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2"
    ]
   },
   {
@@ -685,7 +661,7 @@
     "    ''' \n",
     "    Inputs:\n",
     "        t_0 (int): Initial time to start propagating dynamics\n",
-    "        T (int): End time of propagating dynamics \n",
+    "        T (int): End time of propagating dynamics\n",
     "        q_0 (np.array): initial values of state vector\n",
     "        p_0 (np.array): initial values of costate vector\n",
     "        u_0 (np.array): initial values of control vector\n",
@@ -694,27 +670,37 @@
     "        t_terminal (int): time marking termination of control law propagator algorithm\n",
     "    Outputs:\n",
     "        q_bars, p_bars, u_bars (list of np.arrays): implemented state/costate/control values for entire propagator.\n",
-    "    ''' \n",
+    "    '''\n",
     "    t_0, T, K, q_0, p_0, u_0, state_dim, Gamma, t_terminal = sliding_window_instance.t_0, sliding_window_instance.T, sliding_window_instance.K, sliding_window_instance.q_0, sliding_window_instance.p_0, sliding_window_instance.u_0, sliding_window_instance.state_dim, sliding_window_instance.Gamma, sliding_window_instance.t_terminal\n",
-    "    q_ls_bars, p_ls_bars, p_mfs_bars = [], [], []\n",
+    "    q_ls_bars, p_ls_bars, p_mfs_bars, u_bars = [], [], [], []\n",
     "    t = t_0 # wall clock time\n",
     "    qpu_vec = np.hstack([q_0, p_0, u_0])\n",
     "    while t < t_terminal:\n",
     "        # get values from blackboard\n",
     "        # get values from sensors\n",
-    "        # set initial conditions using those two things above \n",
-    "        \n",
-    "        # for the times, propagate_dynamics needs: t_0, T, and K.  T and K can come from the sliding_window_instance, \n",
+    "        # set initial conditions using those two things above\n",
+    "        p_0\n",
+    "        # for the times, propagate_dynamics needs: t_0, T, and K.  T and K can come from the sliding_window_instance\n",
     "        #...t_0 will be passed in.  t_0 is the start of the window\n",
-    "        qpu_vec, q_ls_bar, p_ls_bar, p_mfs_bar = propagate_dynamics(qpu_vec, sliding_window_instance)\n",
+    "        qpu_vec, q_ls_bar, p_ls_bar, p_mfs_bar, u_bar, q_ls, p_ls, p_mfs, us = propagate_dynamics(qpu_vec, sliding_window_instance)\n",
     "        # qs, ps, and us will go to Mean Field somehow\n",
     "\n",
-    "        q_bars.append(q_bar)\n",
-    "        p_bars.append(p_bar)\n",
+    "        q_ls_bars.append(q_ls_bar)\n",
+    "        p_ls_bars.append(p_ls_bar)\n",
+    "        p_mfs_bars.append(p_mfs_bar)\n",
     "        u_bars.append(u_bar)\n",
     "        \n",
-    "    return q_bars, p_bars, u_bars\n"
+    "    return q_ls_bars, p_ls_bars, p_mfs_bars, u_bars\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
